# libera

./: LICENSE  README.md  TODO.md  package.json  pnpm-lock.yaml  vite.config.ts
public/: pdf-viewer.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/atoms/: Button.tsx  Logo.tsx  NavButton.tsx  PlayButton.tsx  ProgressBar.tsx  RepeatButton.tsx  ShuffleButton.tsx  SkipButton.tsx  VolumeSlider.tsx
src/components/molecules/: AlbumCard.tsx  ArtistCard.tsx  BookRow.tsx  TrackRow.tsx
src/components/organisms/: AlbumGrid.tsx  AlbumView.tsx  ArtistGrid.tsx  ArtistList.tsx  ArtistView.tsx  AudioPlayer.tsx  BookLibrary.tsx  CacheProgress.tsx  EpubViewer.tsx  GenreList.tsx  MusicLibrary.tsx  NavRail.tsx  PdfViewer.tsx  Shell.tsx
src/components/organisms/PdfReader/: PdfCanvas.tsx  PdfReader.tsx  PdfSearchBar.tsx  PdfSidebar.tsx  PdfToolbar.tsx
src/hooks/: useAlbums.ts  useArtists.ts  useArtwork.ts  useAudioPlayer.ts  useBookCover.ts  useBooks.ts  useGenres.ts  useLibrary.ts  usePdfDocument.ts  usePdfSearch.ts
src/pages/: SearchPage.tsx
src/store/: cacheStore.ts  playerStore.ts
src/types/: album.ts  artist.ts  book.ts  genre.ts  track.ts
