[package]
name = "libera"
version = "0.1.0"
description = "A Tauri App"
authors = ["Derrick Christopher Hernández Rojas"]
edition = "2021"

[lib]
name = "libera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1.10"
dirs = "5"
tauri-plugin-dialog = "2"
walkdir = "2"
image = "0.25"
zip = "2"
urlencoding = "2"
